# FloatingMeasure

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  FloatinMeasure.sln  FloatingMeasure.doxygen  FloatingMeasure.kdev4  FloatingMeasure.sln  LICENSE  Makefile  README.md  Test.sln  cmake_install.cmake  compile_commands.json  install_manifest.txt  kdevclazy.makefile
.kdev4/: FloatingMeasure.kdev4  FloatingMeasure.kdev4_back
ComplexMeasureMacros/: ComplexMeasureMacros.cs  ComplexMeasureMacros.csproj
ComplexMeasureMacros/Properties/: AssemblyInfo.cs
Doc/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000004.html  dir_000002_000003.html  dir_000003_000001.html  dir_000003_000004.html  dir_3cc1ee12319a1e4b44eadd444376e454.html  dir_3cc1ee12319a1e4b44eadd444376e454.js  dir_3cc1ee12319a1e4b44eadd444376e454_dep.map  dir_3f9df127c972861d9f1136769a77d603.html  dir_3f9df127c972861d9f1136769a77d603.js  dir_3f9df127c972861d9f1136769a77d603_dep.map  dir_3f9df127c972861d9f1136769a77d603_dep.md5  dir_447f350f92f669c6aec80c720303ced1.html  dir_447f350f92f669c6aec80c720303ced1.js  dir_6f82a1e4e01f06ed5fa9d00574fecad6.html  dir_6f82a1e4e01f06ed5fa9d00574fecad6.js  dir_6f82a1e4e01f06ed5fa9d00574fecad6_dep.map  dir_cd96b92401794952ff5b854cbad786e5.html  dir_cd96b92401794952ff5b854cbad786e5.js  dir_cd96b92401794952ff5b854cbad786e5_dep.map  files.html  files.js  formula.repository  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  (+57 more)
Doc/html/d0/d2f/: ComplexMeasure_8h__incl.map  ComplexMeasure_8h__incl.md5
Doc/html/d0/d31/: MeasureOperator_8cpp__incl.map  MeasureOperator_8cpp__incl.md5
Doc/html/d0/d43/: classCComplexMeasure.html  classCComplexMeasure.js
Doc/html/d0/d5a/: ComplexMeasure_8cpp__incl.map  ComplexMeasure_8cpp__incl.md5
Doc/html/d0/d80/: DigFloat_8cpp.html  DigFloat_8cpp.js  DigFloat_8cpp_source.html
Doc/html/d0/dea/: classCVectorHandle.html  classCVectorHandle.js
Doc/html/d1/d05/: DigFloat_8h__incl.map  DigFloat_8h__incl.md5
Doc/html/d1/d8a/: classCDigFloat-members.html
Doc/html/d1/da1/: DigFloat_8h__dep__incl.map  DigFloat_8h__dep__incl.md5
Doc/html/d1/da7/: MeasureOperator_8h.html  MeasureOperator_8h.js  MeasureOperator_8h_source.html
Doc/html/d1/dd6/: MeasureOperator_8h__dep__incl.map  MeasureOperator_8h__dep__incl.md5
Doc/html/d2/d68/: SimpleMeasure_8h__dep__incl.map  SimpleMeasure_8h__dep__incl.md5
Doc/html/d2/dc8/: Utils_8h__dep__incl.map  Utils_8h__dep__incl.md5
Doc/html/d2/dcf/: classCMeasureOperator__coll__graph.map  classCMeasureOperator__coll__graph.md5
Doc/html/d3/d2e/: uniondbl__64.html  uniondbl__64.js
Doc/html/d3/d72/: classCDigFloat.html  classCDigFloat.js
Doc/html/d3/d95/: VectorHandle_8h.html  VectorHandle_8h_source.html
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  defines_f.js  (+44 more)
Doc/latex/: annotated.tex  dir_3cc1ee12319a1e4b44eadd444376e454.tex  dir_3cc1ee12319a1e4b44eadd444376e454_dep.md5  dir_3f9df127c972861d9f1136769a77d603.tex  dir_447f350f92f669c6aec80c720303ced1.tex  dir_6f82a1e4e01f06ed5fa9d00574fecad6.tex  dir_6f82a1e4e01f06ed5fa9d00574fecad6_dep.md5  dir_cd96b92401794952ff5b854cbad786e5.tex  dir_cd96b92401794952ff5b854cbad786e5_dep.md5  files.tex  hierarchy.tex  refman.tex
FloatingMeasure/: CMakeLists.txt  FloatingMeasure.vcxproj  Makefile  cmake_install.cmake
FloatingMeasure/DigFloat/: DigFloat.cpp  DigFloat.h
FloatingMeasure/FloatingMeasure/: FloatingMeasure.cpp  FloatingMeasure.h
FloatingMeasure/Measure/: BaseMeasure.cpp  BaseMeasure.h  ComplexMeasure.cpp  ComplexMeasure.h  ComplexMeasureMacros.h  MeasureOperator.cpp  MeasureOperator.h  PreMeasure.cpp  PreMeasure.h  SimpleMeasure.cpp  SimpleMeasure.h  VectorHandle.cpp  VectorHandle.h
FloatingMeasure/Utils/: CommonUtils.h  Log4cplusWrapper.cpp  Log4cplusWrapper.h  Singleton.h  Utils.cpp  Utils.h
FloatingMeasureWrapper/: AssemblyInfo.cpp  ComplexMeasureWrapper.cpp  ComplexMeasureWrapper.h  DigFloatWrapper.cpp  DigFloatWrapper.h  FloatingMeasureWrapper.cpp  FloatingMeasureWrapper.h  FloatingMeasureWrapper.vcxproj  FloatingMeasureWrapper.vcxproj.filters  ManagedObject.h  UtilsManaged.h
FloatingMeasureWrapperTest/: ComplexMeasureWrapperTest.cs  FloatingMeasureWrapperTest.cs  FloatingMeasureWrapperTest.csproj  UnitTest1.cs
FloatingMeasureWrapperTest/Properties/: AssemblyInfo.cs
FloatingMeasure_Examples/: CMakeLists.txt  FMEx_CheckMeasValue  FMEx_CheckMeasValue.cpp  FMEx_CheckMeasValue.vcxproj  FMEx_Velocity  FMEx_Velocity.cpp  FMEx_Velocity.vcxproj  FloatingMeasure_Examples.vcxproj  Makefile  cmake_install.cmake
FloatingMeasure_Test/: BaseMeasure_Test.cpp  CMakeLists.txt  ComplexMeasure_Test.cpp  DigFloat_Test.cpp  FloatingMeasure_Test  FloatingMeasure_Test.cpp  FloatingMeasure_Test.vcxproj  FloatingMeasure_TestRunner.cpp  Makefile  PreMeasure_Test.cpp  SimpleMeasure_Test.cpp  TestRunner  Utils_Test.cpp  cmake_install.cmake
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  Test.vcxproj  TestRunner.cpp
src/: CMakeLists.txt  FloatingMeasure.vcxproj  cmake_install.cmake
src/DigFloat/: DigFloat.cpp  DigFloat.h
src/FloatingMeasure/: FloatingMeasure.cpp  FloatingMeasure.h
src/Measure/: BaseMeasure.cpp  BaseMeasure.h  ComplexMeasure.cpp  ComplexMeasure.h  ComplexMeasureMacros.h  MeasureOperator.cpp  MeasureOperator.h  PreMeasure.cpp  PreMeasure.h  SimpleMeasure.cpp  SimpleMeasure.h  VectorHandle.cpp  VectorHandle.h
src/Utils/: Utils.cpp  Utils.h
text/: INFO.txt
(+178 files in other folders)
